Api changes. DateTime parsing improvement
